# magpie

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  historian.manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  development.md
magpie/: __init__.py  __main__.py  a2a.py  app.py  cli.py  config.example.json  config.py  doctor.py  errors.py  evidence.py  historian.py  models.py  routes.py  runcontext.py  service.py  storage.py  telemetry.py  text.py
magpie/prompts/: __init__.py  classify_anime_request.txt  classify_news_request.txt  json_retry.txt  loader.py  propose_query.txt  refine_anime_title_queries.txt  route_request.txt  select_anime_candidate.txt  select_character.txt  synthesize.txt  synthesize_explanatory.txt  synthesize_procedural.txt  synthesize_recipe.txt  synthesize_retry.txt
magpie/providers/: _http.py  anilist.py  base.py  crawl4ai_fetcher.py  exa.py  fake.py  neonhail.py  news_rss.py  openai_compatible.py
tests/: __init__.py  test_cli.py  test_config.py  test_historian.py  test_invariants.py  test_provider_failures.py  test_providers.py  test_resolver.py  test_service.py  test_storage.py
