[project]
name = "magpie"
version = "0.1.0"
description = "Bounded web-research worker with A2A and CLI entrypoints."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk[fastapi]>=1.0.0",
  "crawl4ai>=0.7.5",
  "httpx>=0.28.1",
  "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
magpie = "magpie.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magpie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
